--- a/style.css
+++ b/style.css
@@ -1,12 +1,25 @@
-body{
-    background: #CCCCCC;
+
+#banner{
+    height: 50%;
+    width: 100%; 
 }
-h1{
+.titulo-principal{
+    text-align: center;
+}
+
+.principal{
+    background: #CCCCCC;
+    padding: 30px
+}
+
+.titulo-centralizado{
 text-align: center;
 }
+
 p {
     text-align: center;
 }
+
 #missao{
     font-size: 20px;
 }
@@ -15,4 +28,24 @@ em strong{
     color: #FF0000;
 }
 
+.itens{
+   font-style: italic;
+}
 
+.beneficios{
+    background: #ffffff;
+    padding: 20px;
+}
+
+ul{
+    display: inline-block;
+    vertical-align: top;
+    width: 20%;
+    height: 15%;
+}
+
+#logo{
+    width: 50%;
+
+  
+}
